# facebluk-experiment-rust-backend

./: .gitignore  docker-compose.yaml
db-migrations/: cli-commands.txt
db-migrations/event-store-pg/: changelog.xml  local.main.properties
rust-projects/: .env.example  Cargo.toml
rust-projects/apps/user_command_api/: Cargo.toml
rust-projects/apps/user_command_api/src/: main.rs  routes.rs  shared.rs
rust-projects/apps/user_command_api/src/routes/: register_user_route.rs
rust-projects/apps/user_command_api/src/shared/: app_state.rs  config.rs  error_handling.rs  parsers.rs  user_extractor.rs
rust-projects/libs/domain/: Cargo.toml
rust-projects/libs/domain/src/: config.rs  modules.rs
rust-projects/libs/domain/src/modules/: event_store.rs  shared.rs
rust-projects/libs/domain/src/modules/event_store/: aggregate.rs  event.rs  event_data.rs  post.rs  user.rs
rust-projects/libs/domain/src/modules/msg_broker/: user.rs
rust-projects/libs/domain/src/modules/shared/: datetime.rs  errors.rs  image.rs  json_serializer.rs  jsonwebtoken.rs  uuid.rs
rust-projects/libs/domain/src/modules/user_auth/: user.rs
rust-projects/libs/infra_event_store_pg/: Cargo.toml
rust-projects/libs/infra_event_store_pg/src/: config.rs  errors.rs  lib.rs  user.rs
rust-projects/libs/infra_event_store_pg/src/user/: mutations.rs  queries.rs
rust-projects/libs/infra_rabbitmq/: Cargo.toml
rust-projects/libs/infra_rabbitmq/src/: config.rs  errors.rs  lib.rs
rust-projects/libs/infra_supabase/: Cargo.toml
rust-projects/libs/infra_supabase/src/: config.rs  errors.rs  file_storage.rs  lib.rs  user_auth.rs
rust-projects/libs/infra_supabase/src/file_storage/: mutations.rs  queries.rs  user.rs
rust-projects/libs/infra_supabase/src/file_storage/user/: mutations.rs  queries.rs
rust-projects/libs/infra_supabase/src/user_auth/user/: mutations.rs  queries.rs
rust-projects/libs/integrator/: Cargo.toml
rust-projects/libs/integrator/src/: event_store.rs  file_storage.rs  lib.rs  msg_broker.rs  user_auth.rs
rust-projects/libs/integrator/src/command_handlers/: register_user_handler.rs
rust-projects/libs/integrator/src/event_store/: user_accessor.rs
rust-projects/libs/integrator/src/file_storage/: file_accessor.rs  user_accessor.rs
rust-projects/libs/integrator/src/user_auth/: user_accessor.rs
