[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["v4"] }
jsonwebtoken = "8.3.0"
chrono = "0.4.26"