[package]
name = "infra_rabbitmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
integrator = { path = "../integrator" }
domain = { path = "../domain" }
async-trait = { workspace = true }